[project]
name = "townsfolk"
version = "0.1.0"
description = "Phone / IP / coords -> point + cities-within-radius. Eats firehose + gazetteer JSONs into PostGIS, serves location.openapis.ca/v1/lookup."
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "asyncpg>=0.30",
  "httpx>=0.28",
]

[project.scripts]
townsfolk = "townsfolk.main:run"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/townsfolk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
